Trying to clean up generics